fix reference to stylesheet

--- a/public/forum_footer.html
+++ b/public/forum_footer.html
@@ -2,7 +2,7 @@
 copy this and insert it into the "Custom footer HTML field on
 https://chefsteps.dozuki.com/Manage/appearance
 -->
-<link href="http://www.chefsteps.com/assets/forum_header.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="http://www.chefsteps.com/assets/forum_nav.css" media="screen" rel="stylesheet" type="text/css" />
 <div id='custom-footer'>
   <div class='hero-unit footer'>
     <div class='container'>
