make 'Forum' link have active style

--- a/public/forum_header.html
+++ b/public/forum_header.html
@@ -20,7 +20,7 @@ https://chefsteps.dozuki.com/Manage/appearance
       <a href='http://www.chefsteps.com/courses/accelerated-sous-vide-cooking-course' target='_top'>Course</a>
     </li>
     <li>
-      <a href='http://forum.chefsteps.com'>Forum</a>
+      Forum
     </li>
     <li class='last'>
       <a href='http://blog.chefsteps.com' target='_top'>Blog</a>
