--- a/public/forum_footer.html
+++ b/public/forum_footer.html
@@ -30,6 +30,9 @@ https://chefsteps.dozuki.com/Manage/appearance
           <p>
             <a class='icon-pinterest' href='http://pinterest.com/chefsteps/'>Pinterest</a>
           </p>
+          <p>
+            <a class='icon-legal' href='http://www.chefsteps.com/legal/'>Legal</a>
+          </p>
         </div>
       </div>
     </div>
