update licensing copy and add link

--- a/public/forum_footer.html
+++ b/public/forum_footer.html
@@ -17,7 +17,9 @@ https://chefsteps.dozuki.com/Manage/appearance
             <a href="mailto:press@chefsteps.com">press@chefsteps.com</a>
           </p>
           <p class='creative-commons'>
-            All images and videos are Creative Commons, Non-Commercial
+            <a href="http://creativecommons.org/licenses/by-nc-sa/3.0" target="_blank">
+              All Content is Creative Commons Attribution-NonCommercial-ShareAlike
+            </a>
           </p>
         </div>
         <div class='span2 pull-right'>
